Testing Jenkins trigger part 3